# result

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
cmake/: googletest-download.cmake  googletest.cmake
doctest/: doctest.h
inc/: concepts.h  result.h  traits.h
test/: CMakeLists.txt  result_test.cpp
